# nord

./: .gitignore  CONFIG_OVERVIEW.md  Cargo.toml  Default.toml  Dockerfile  README.md  Settings.toml  TODO  docker-compose.yml
scripts/: init-tables.sql
src/: dbconfig.rs  logger.rs  main.rs
src/config/: config.rs  config_loader.rs  mod.rs
src/db/: storage.rs
src/lending/: config.rs  engine.rs  mod.rs
src/margining/: config.rs  mod.rs  system.rs
src/riskmanagement/: config.rs  mod.rs
src/trading/: config.rs  engine.rs  mod.rs
src/utils/: mod.rs
