[package]
name = "nord"
version = "0.1.0"
authors = ["kotatut@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
rust_decimal = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "nord"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3