[package]
name = "nord"
version = "0.1.0"
authors = ["kotatut@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
rust_decimal = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = "1.2.2"

# Logging utilities.
log = "0.4"
env_logger = "0.9"

# Any specific cryptographic functions you might need for secure operations.
# For example, if you're handling tokens, cryptographic signatures, etc.
# This is just an example dependency, adjust based on your actual needs.
sha2 = "0.10"
rand = "0.8"

# If you plan to use RESTful APIs or interact with web services.
reqwest = { version = "0.11", features = ["json"] }

# If your application has a configuration file you'd like to manage:
config = "0.11"

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "nord"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3